--- a/NEWS
+++ b/NEWS
@@ -11,7 +11,7 @@ Version 1.9.5 [2014-03-23]:
 
 Version 1.9.4 [2014-03-22]:
 - `trim`: a warning is thrown if the resulting MassSpectrum/MassPeaks object
-  contains no data points anymore.
+  does not contain any data points.
 
 Version 1.9.3 [2014-03-12]:
 - Use `table` instead of `any(length(fiedler2009subset[[1]]) == sapply(...` in
