--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,14 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
-- INTERNAL: move body of estimateNoise,MassSpectrum to .estimateNoise.
+Version 1.9.9 [2014-04-10]:
+- `.transformIntensity`: show warning if negative intensities are generated and
+  set them to zero;
+  affected functions: `transformIntensity`, `smoothIntensity`,
+  `calibrateIntensity`.
 
+Version 1.9.8 [2014-04-10]:
+- INTERNAL: move body of estimateNoise,MassSpectrum to .estimateNoise.
 - REMOVED: `detectPeaks`, argument "fun": use "method" argument instead.
 
 Version 1.9.7 [2014-04-09]:
