--- a/NEWS
+++ b/NEWS
@@ -67,6 +67,7 @@ INTERNAL CHANGES
   `.estimateNoise`.
 * Move tests into tests/testthat/ to adapt to testthat 0.8 and new
   CRAN policy; closes #44.
+* `.localMaximaR`: removed; it was replaced by a C version in 1.5.
 
 
 CHANGES IN MALDIquant VERSION 1.9 [2014-01-14]:
