--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,10 @@ RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 
 - move the content of the manual pages of .savitzkyGolay and .movingAverage to
   smoothIntensity and remove the old ones.
+- move the content of the manual pages of
+  .estimateBaseline{Snip,TopHat,ConvexHull,Median} to estimateBaseline and
+  remove the old ones.
+
 
 CHANGES IN MALDIquant VERSION 1.10 [2014-04-11]:
 ------------------------------------------------
