--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.11.1 [2014-09-08 Mon]:
+- Removed (was defunct since 1.10): `intensityMatrix` for MassSpectrum objects.
+
 
 CHANGES IN MALDIquant VERSION 1.11 [2014-08-11]:
 ------------------------------------------------
