--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.11.4 [2015-04-22 Wed]:
+- Add `as` for MassPeaks to convert them into MassSpectrum objects.
+
 Version 1.11.3 [2015-04-19 Sun]:
 - `plotImsSlice`: fix plot function for slices with only one row or one column.
 
