--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.11.5 [2015-05-06 Wed]:
+- Rewrite `intensityMatrix` to improve execution time.
+
 Version 1.11.4 [2015-04-22 Wed]:
 - Add `as` for MassPeaks to convert them into MassSpectrum objects.
 
