--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ Version 1.11.9 [2015-05-10 Sun]:
   `.estimateBaseline`; no user visible changes;
   affected functions: `estimateNoise`, `estimateBaseline`, `detectPeaks`
 - Remove superfluous arguments in internal `.calibrateIntensitySimple`.
+- Avoid double check for negative intensity values in `transformIntensity`.
 
 Version 1.11.8 [2015-05-09 Sat]:
 - The return value of the internal `.as.matrix.MassObjectList` function gains an
