--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.12.7 [2015-07-28 Tue]:
+- FIX: add `smoothIntensity` to the `?MALDIquant-parallel` manual page. Thanks
+  Leiming Yu <leimingyu830@gmail.com> for reporting the missing entry.
+
 Version 1.12.6 [2015-07-13 Mon]:
 - BUGFIX: `.plotMsiSlice` just used the first center if "combine=TRUE";
   affected functions: `plotMsiSlice`.
