rewrite DESCRIPTION and explain akronyms to satisfy CRAN maintainers; close #50

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,8 @@ RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 
 Version 1.12.8 [2015-08-11 Tue]:
 - Extend example `?MALDIquant-parallel` manual page.
+- Rewrite DESCRIPTION and explain akronyms to satisfy CRAN maintainers;
+  closes #50.
 
 Version 1.12.7 [2015-07-28 Tue]:
 - FIX: add `smoothIntensity` to the `?MALDIquant-parallel` manual page. Thanks
